--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <style>
+  @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Pixelify+Sans:wght@400..700&display=swap');
 
     * {
       margin: 0;
@@ -15,7 +16,8 @@
     }
 
     body {
-      font-family:sans-serif;
+    /**font-family: "ＭＳ Ｐゴシック";**/
+      font-family: sans-serif;
       padding: 20px;
       display: flex;
       justify-content: center; /* center horizontally */
@@ -24,7 +26,7 @@
 
     .main {
       width: 90%;
-      max-width: 1200px;
+      max-width: 720px;
       line-height: 1.8;
       padding: 20px;
     }
@@ -45,25 +47,40 @@
       margin: 10px 0;    /* optional spacing between images */
     }
 
-    .main .logo {
-      max-width: 300px;   /* adjust max size */
-      max-height: 20vh;   /* don't exceed 20% of viewport height */
-      width: auto;
-      height: auto;
-      display: block;
-      margin: 0 auto 20px auto; /* center horizontally + spacing below */
-}
 
   </style>
 </head>
 <body>
   <div class="main">
 
-    <img src="bricklogo.jpeg" alt="Logo" class="logo">
     <h1>Boo-yah!</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>This is my very first blog post! I have been wanting to do this for ages. Welcome! I want to share my stuff with you, like <mark>drawings</mark>, the <mark>music</mark> that I produce or thoughts on what I'm reading. Let's go!</p>
     <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <br>
+    <p>SATURDAY, OCTOBER 4, 2025</p>
+    <br>
+    <p>Recently, I read the short story <a href="https://www.lightspeedmagazine.com/fiction/the-ones-who-stay-and-fight/">"The Ones Who Stay And Fight" by N.K Jemisin</a>
+. It's intruiging! The plot is built upon the paraodx of tolerance and revolves around an utopian city within a parallel dimension. </p>
+    <p>&nbsp;&nbsp;&nbsp;Recently, I read the story "The Ones Who Stay And Fight" by N.K Jemisin. It's intruiging! The plot is built upon the paraodx of tolerance and revolves around an utopian city within a parallel dimension. </p>
+    <br>
+    <br>
+    
+    <p>SATURDAY, OCTOBER 4, 2025</p>
+    <br>
+    <p>Recently, I read the story "The Ones Who Stay And Fight" by N.K Jemisin. It's intruiging! The plot is built upon the paraodx of tolerance and revolves around an utopian city within a parallel dimension. </p>
+    <p>&nbsp;&nbsp;&nbsp;Recently, I read the story "The Ones Who Stay And Fight" by N.K Jemisin. It's intruiging! The plot is built upon the paraodx of tolerance and revolves around an utopian city within a parallel dimension. </p>
+    <img src="kid_riding_dragon.png" alt="">
+
+    
+    <p>Recently, I read the story          <audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>  "The Ones Who Stay And Fight" by N.K Jemisin. It's intruiging! The plot is built upon the paraodx of tolerance and revolves around an utopian city within a parallel dimension. </p>
+
+    <p>&nbsp;&nbsp;&nbsp;Recently, I read the story "The Ones Who Stay And Fight" by N.K Jemisin. It's intruiging! The plot is built upon the paraodx of tolerance and revolves around an utopian city within a parallel dimension. </p>
+
+
 
   </div>
 </body>
